--- a/to-do-List/src/Components/section/Header.module.css
+++ b/to-do-List/src/Components/section/Header.module.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --blue: #0c70f2;
+  --yellow: #bdac3f;
   --white: #ffffff;
   --fontFamily: poppins;
 }
 .header {
-  background-color: var(--blue);
+  background-color: var(--yellow);
   height: 85px;
   display: flex;
   align-items: end;
@@ -44,14 +44,14 @@
   border-radius: 10px 10px 0 0;
   cursor: context-menu;
 
-  color: var(--blue);
+  color: var(--yellow);
   background-color: var(--white);
 }
 
 /* ==== STYLE FOR PHONE ===== */
 @media (max-width: 501px) {
   .header {
-    background-color: var(--blue);
+    background-color: var(--yellow);
     height: 55px;
     display: flex;
     align-items: end;
@@ -95,7 +95,7 @@
     border-radius: 10px 10px 0 0;
     cursor: context-menu;
 
-    color: var(--blue);
+    color: var(--yellow);
     background-color: var(--white);
   }
 }
@@ -103,7 +103,7 @@
 /* ==== STYLE FOR SMALL TABLET */
 @media (min-width: 501px) and (max-width: 751px) {
   .header {
-    background-color: var(--blue);
+    background-color: var(--yellow);
     height: 65px;
     display: flex;
     align-items: end;
@@ -143,7 +143,7 @@
     border-radius: 10px 10px 0 0;
     cursor: context-menu;
 
-    color: var(--blue);
+    color: var(--yellow);
     background-color: var(--white);
   }
 }
